Reduce the number of callbacks by encapsulating the gallery & photo list into one GalleryData class.  Simplify the create/update calls by passing a Gallery object back to the server, which now includes the thumbnail MediaDesc.  Add a list of galleries to profile and link the profile avatar image to profile gallery (both in DEV only for now because destination pages do not yet exist).

--- a/src/gwt/public/people/people.css
+++ b/src/gwt/public/people/people.css
@@ -97,7 +97,16 @@
   width: 400px;
 }
 
-.profile .Friend, .profile .Group {
+.profile .Gallery {
+  width: 100px;
+  float: left;
+}
+
+.profile .Gallery .thumbBox {
+  margin: auto;
+}
+
+.profile .Friend, .profile .Group, .profile .Gallery {
   text-align: center;
   font-size: 12px;
   padding: 5px;
