- Use PagedTable - Add an update button to each row. - Actually update the mapping - Still TODO: update the users who used the updated referral.

--- a/src/gwt/public/admin/admin.css
+++ b/src/gwt/public/admin/admin.css
@@ -163,3 +163,12 @@
 .abTestEditorDialog .ButtonPair {
   clear: both;
 }
+
+/* ------------------------------------
+   Affiliate Mapping
+-------------------------------------*/
+/* NOT WORKING
+.affiliateMapPanel {
+  width: 650px;
+}
+*/
