Added the ability to get the worth of bling in USD and added the info to the Transactions page.

--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -458,3 +458,9 @@
   padding-right: 5px;
 }
 
+/* ------------------------------------
+   BADGE DISPLAYS ANYWHERE
+-------------------------------------*/
+.bling .header {
+	font-weight: bold;
+}
