Oh the rabbit holes, how deep they go. We want to provide the name of the room or game you're pimping to the recipient of the email. This motivated a bunch of other cleaning up and cargo uncultery.

--- a/rsrc/email/shareGameInvite.tmpl
+++ b/rsrc/email/shareGameInvite.tmpl
@@ -1,9 +1,9 @@
-${name} wants you to play this Whirled game
+${inviter} wants you to play ${name}
 #if (${message})
 "${message}"
 
 #end
-Check out this Whirled game:
+Check out this game in Whirled called "${name}":
 
 ${link}
 
@@ -12,4 +12,4 @@ browser's address bar.)
 
 Hope you like it!
 
--- ${name}
+-- ${inviter}
