--- a/rsrc/email/shareRoomInvite.tmpl
+++ b/rsrc/email/shareRoomInvite.tmpl
@@ -1,9 +1,9 @@
-${name} wants you to see this Whirled room
+${inviter} wants you to see ${name}
 #if (${message})
 "${message}"
 
 #end
-Check out this Whirled room:
+Check out this room in Whirled called "${name}":
 
 ${link}
 
@@ -12,4 +12,4 @@ browser's address bar.)
 
 Hope you like it!
 
--- ${name}
+-- ${inviter}
