--- a/src/gwt/public/person/person.css
+++ b/src/gwt/public/person/person.css
@@ -63,26 +63,94 @@
    GALLERIES
 -------------------------------------*/
 
-.Gallery {
+/* TODO rename .Gallery */
+.galleryViewPanel, .galleryEditPanel {
+  width: 100%;
+  height: 100%;
+  min-height: 500px;
+  background: #509BD2 url(/images/group/detail_bg.png) repeat-x;
+}
+
+.galleryViewPanel .Thumbnail,
+.galleryEditPanel .Thumbnail {
+  width: 80px;
+  height: 60px;
+  margin: 10px 10px 0 0;
+  float: left;
+  border: 1px solid #000000;
+  background-color: #FFFFFF;
+  padding: 5px;
+  text-align: center;
+}
+
+.galleryViewPanel .CurrentPhoto {
   width: 100%;
   height: 100%;
 }
 
-.GalleryDetail {
-  width: 225px;
-  height: 400px;
-  overflow-y: scroll;
-  text-align: left;
+.galleryViewPanel .GreyMask {
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  filter: alpha(opacity=50);
+  -moz-opacity: .50;
+  opacity: .50;
 }
 
-.GalleryDetail .Name {
-  width: 200px;
-  height: 32px;
-  align: center;
+.galleryViewPanel .FullSizeContainer {
+  width: 100%;
+  height: 100%;
+}
+    
+.galleryViewPanel .FullSize {
+  margin: 30px auto 0 auto;
+  background-color: #000000;
+  border: solid #000000 10px;
 }
 
-.GalleryDetail .Description {
+.galleryDetailPanel {
+  background: url(/images/people/gallery_details_box.png) no-repeat;
   width: 200px;
-  height: 275px;
-  align: center;
+  height: 320px;
+  margin: 10px 0 0 10px;
+  padding: 5px;
 }
+
+.galleryDetailPanel .Thumbnail {
+  float: none;
+}
+
+/* Styles both static divs and input boxes */
+.galleryDetailPanel .Name, 
+.galleryDetailPanel .Description {
+  width: 180px;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  color: #24598d;
+}
+
+.galleryDetailPanel .Name {
+  height: 45px;
+  font-size: 18px;
+  overflow: hidden;
+}
+
+.galleryDetailPanel .Description {
+  height: 120px;
+  font-size: 15px;
+}
+
+/*
+.galleryDetailPanel input.Name,
+.galleryDetailPanel input.Description {
+  width: 180px;
+}
+
+.galleryDetailPanel input.Name {
+  height: 30px;
+}
+
+.galleryDetailPanel input.Description {
+  height: 200px;
+}
+*/
