--- a/src/gwt/public/landing/landing.css
+++ b/src/gwt/public/landing/landing.css
@@ -75,7 +75,7 @@
 -------------------------------------*/
 
 .LandingPanel .logonPanel {
-  background: url(/images/landing/login_bg.png) no-repeat top center;
+  background: url(/images/landing/logon_bg.png) no-repeat top center;
   width: 170px;
   height: 60px;
 }
@@ -102,10 +102,10 @@
   font-size: 11px;
 }
 
-.LandingPanel .LoginButton {
+.LandingPanel .LogonButton {
   font-size: 13px;
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-  background: url(/images/landing/login_button_bg.png) no-repeat top center;
+  background: url(/images/landing/logon_button_bg.png) no-repeat top center;
   width: 50px;
   height: 21px;
   padding-top: 3px;
