--- a/src/gwt/public/page/page.css
+++ b/src/gwt/public/page/page.css
@@ -3,3 +3,11 @@
  *
  * CSS styles used by individual pages.
  */
+
+.passwordExpired .Message {
+  margin: 10px 10px 0px 10px;
+}
+
+.passwordExpired .logonPanel {
+  margin: 10px;
+}
