--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -421,6 +421,10 @@
   color: #4a7595;
 }
 
+/* ------------------------------------
+   MONEY / TRANSACTIONS
+-------------------------------------*/
+
 .transactions {
   padding: 15px;
   width: 100%;
@@ -431,14 +435,16 @@
 }
 
 .Balance .row1 {
-  background: #dadada;
+  background: #dbeffc;
 }
 
 .Balance .header {
-  background: #3A86B7;
+  background: #ff992b;
   color: white;
   text-align: center;
   font-weight: bold;
+  font-size: 14px;
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
 
 .Balance .col0 { /* Date */
@@ -458,9 +464,6 @@
   padding-right: 5px;
 }
 
-/* ------------------------------------
-   BADGE DISPLAYS ANYWHERE
--------------------------------------*/
 .bling .header {
 	font-weight: bold;
 }
