Bling -> bar exchange completed (though some UI specifics will likely change going forward).

--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -464,6 +464,18 @@
   padding-right: 5px;
 }
 
+/* ------------------------------------
+   BLING
+-------------------------------------*/
+
 .bling .header {
 	font-weight: bold;
+}
+
+.bling .Error {
+    color: red;
+}
+
+.bling .Success {
+    color: green;
 }
