--- a/src/gwt/public/person/person.css
+++ b/src/gwt/public/person/person.css
@@ -191,7 +191,7 @@
   float: left;
   height: 80px;
   width: 80px;
-  margin: 10px 10px 0 10px;
+  margin: 10px 0 0 10px;
   padding: 5px;
   text-align: center;
   border: 1px solid #000000;
