Switch to using a list to display tables so that maybe I can get alternatingItemColors to work. Of course it doesn't work, but hey, what's another few hours of beating my head against Flex between friends?

--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -1146,6 +1146,12 @@ BasePanel {
   paddingBottom: 5px;
 }
 
+.tableList {
+  backgroundAlpha: 0;
+  borderStyle: none;
+  alternatingItemColors: #FFCC99, #CCCCCC;
+}
+
 .pendingTableList, .runningTableList {
   verticalGap: 5;
 }
