Added a link to the game's instructions on the splash panel. Fixed up some party game related bits.

--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -1112,6 +1112,7 @@ BasePanel {
 
 /** Lobby splash panel */
 .lobbySplashPanel {
+  horizontalAlign: center;
   verticalGap: 0;
 }
 
@@ -1123,6 +1124,12 @@ BasePanel {
 .lobbySplashPlaying {
   fontSize: 14px;
   fontWeight: bold;
+}
+
+.lobbySplashInstructions {
+  fontSize: 11px;
+  color: #999999;
+  textDecoration: underline;
 }
 
 .lobbyMatchPanel {
