--- a/src/gwt/public/person/person.css
+++ b/src/gwt/public/person/person.css
@@ -159,7 +159,8 @@
 
 /* Styles both static divs and input boxes */
 .galleryDetailPanel .Name,
-.galleryDetailPanel .Description {
+.galleryDetailPanel .Description,
+.galleryDetailPanel .Description .gwt-TextArea {
   width: 180px;
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   font-weight: bold;
@@ -174,6 +175,11 @@
 
 .galleryDetailPanel .Description {
   height: 120px;
+  font-size: 15px;
+}
+
+.galleryDetailPanel .Description .gwt-TextArea {
+  height: 105px;
   font-size: 15px;
 }
 
