stretchButton style tweaks

--- a/src/gwt/public/global/gwt.css
+++ b/src/gwt/public/global/gwt.css
@@ -935,6 +935,8 @@ img, embed, applet, object {
 
 .stretchButton {
   cursor: pointer;
+  white-space: nowrap;
+  float: left;
 }
 
 .orangeThick, .blueThick {
