--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -430,6 +430,10 @@
   width: 100%;
 }
 
+.transactions .roundBox {
+  margin: 0 15px 15px 0;
+}
+
 .Balance {
   width: 100%;
 }
@@ -451,8 +455,8 @@
   width: 100%;
 }
 
-.Balance .col2, .Balance .col3 { /* Debit, credit */
-  text-align: center;
+.Balance .col2, .Balance .col3, .Balance .col4 { /* Debit, credit, balance */
+  text-align: right;
 }
 
 .Balance .ReportFilter {
